Remove some --add-opens